--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
   "pre-commit": {
     "silent": true,
     "run": [
-      "build",
+      "build-prod",
       "test",
       "flow",
       "eslint",
